--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Responsive Porfolio Website with SASS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
   },
   "author": "Andres Mena",
   "license": "ISC",
